Try to fix builds of the Android SDK